# django-select-multiple-field

./: .gitignore  .travis.yml  CONTRIBUTORS.md  CONTRIBUTORS.rst  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
select_multiple_field/: __init__.py  codecs.py  forms.py  models.py  validators.py  widgets.py
test_projects/django14/django14/: settings.py  urls.py
test_projects/django14/forthewing/: models.py  tests.py  urls.py  views.py
test_projects/django14/pizzagigi/: admin.py  models.py  tests.py  urls.py  views.py
test_projects/django14/suthern/: migration_helpers.py  models.py  tests.py
test_projects/django14/suthern/migrations/: 0001_initial.py  0002_auto__add_field_chickenballs_dips.py
test_projects/django18/django18/: settings.py  urls.py
test_projects/django18/forthewing/: urls.py
test_projects/django18/forthewing/templatetags/: chickenwings_tags.py
test_projects/django18/pizzagigi/: admin.py  models.py  tests.py  urls.py  views.py
test_projects/django18/pizzagigi/templatetags/: pizza_tags.py
test_projects/django42/: manage.py
test_projects/django42/django42/: asgi.py  settings.py  urls.py  wsgi.py
test_projects/django42/forthewing/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
test_projects/django42/forthewing/migrations/: 0001_initial.py
test_projects/django42/pizzagigi/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
test_suite/: settings_for_tests.py  test_codecs.py  test_forms.py  test_models.py  test_validators.py  test_widgets.py
(+69 files in other folders)
