[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-select-multiple-field"
version = "1.0.0.dev1"
description = "Select multiple choices in a single Django model field"
readme = "README.rst"
license = {text = "BSD"}
authors = [
    {name = "Kelvin Wong", email = "code@kelvinwong.ca"}
]
keywords = ["select", "select multiple", "Django", "model-field", "Django-Select-Multiple-Field"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/kelvinwong-ca/django-select-multiple-field"
Repository = "https://github.com/kelvinwong-ca/django-select-multiple-field"

[tool.setuptools.packages.find]
include = ["select_multiple_field*"]